--- a/Rechnernetze/Uebungsblatt_4/Uebungsblatt_4.tex
+++ b/Rechnernetze/Uebungsblatt_4/Uebungsblatt_4.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,a4paper,headsepline]{scrreprt}
 
 \input{config.tex}
-
+\usepackage[euler]{textgreek}
 \begin{document}
 \pagenumbering{arabic}
 
@@ -10,8 +10,52 @@
 \section*{Übungsblatt 4}
 
 \subsection*{Aufgabe 1}
+a)\\
+AFH(Adaptive frequency-hopping spread spectrum) ist ein bestimmter Typ des FHSS(Frequency Hopping Spread Spectrum) verfahren. Dabei wird das Frequenzband im mehrere Gruppen aufgeteilt, dadurch kann ein gerät mit mehreren Empfängern kommunizieren. Es ist ein Frequenzmultiplexverfahren.\\
+
+TDD(Time-divison duplexing) ist ein Verfahren bei dem der Chanel in 625\textmu s große Slots aufgeteilt wird. Der Master beginnt das Senden immer bei den geraden und der Slave bei den ungeraden Slots. Es ist ein Zeitmultiplexverfahren.\\
+
+b)\\
+Durch die Einführung von AFH gab es weniger Probleme mit RFI(radio frequency interference).
 
 \subsection*{Aufgabe 2}
+a)\\
+Ich würde nach zwei Nullen mit einer eins bitstopfen, damit man keine drei Nullen hinter einander hat.
 
+b)\\
+Flagbitsequenz: 10001\\
+
+empfangene Bits:\\10001 00110 10011 01001 00100 11010 01101 11001 01011 10001\\
+
+empfangene Bits ohne Flagbitsequenz:\\00110 10011 01001 00100 11010 01101 11001 01011\\
+
+gestopfte bits markieren:\\00\textbf{1}10 100\textbf{1}1 0100\textbf{1} 00\textbf{1}00 \textbf{1}1010 0\textbf{1}101 1100\textbf{1} 01011\\
+
+Daten ohne gestopfte Bits:\\00101 00101 00000 01010 01011 10001 011\\
+\clearpage
+c)\\
+Matrikel Nummer: 4924109\\
+
+kodierung in hex:\\
+$\frac{4924109}{16} = 3076506$ Rest 13 hex => D\\
+$\frac{307756}{16} = 19234$ Rest 12 hex => C\\
+$\frac{19234}{16} = 1202$ Rest 2 hex => 2\\
+$\frac{1202}{16} = 75$ Rest 2 hex => 2\\
+$\frac{75}{16} = 4$ Rest 11 hex => B\\
+$\frac{4}{16} = 0$ Rest 4 hex => 4\\
+
+
+in hex also: 4B22CD\\
+in Bits: 100 1011 0010 0010 1100 1101\\
+
+
+gestopft mit Flagbitsequenz 10001:\\
+100\textbf{1} 1011 00\textbf{1}10 0\textbf{1}010 1100\textbf{1} 1101\\
+
+little endian umformung:\\
+1011 10011 01010 01100 1101 1001\\
+
+hinzufügen der Flagbitsequenz am Anfang und am Ende:\\
+10001 10111 00110 10100 11001 10110 01100 01
 
 \end{document}
